[tool.poetry]
name = "pytest-spec"
version = "3.1.0rc1"
description = "Library pytest-spec is a pytest plugin to display test execution output like a SPECIFICATION."
readme = "README.md"
authors = ["Pawel Chomicki <pawel.chomicki@gmail.com>"]
license = "GPL-2.0-or-later"
homepage = "https://github.com/pchomik/pytest-spec"
repository = "https://github.com/pchomik/pytest-spec"
keywords = ["pytest", "test", "unittest", "spec"]
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities"
]
packages = [
    { include = "pytest_spec" },
    { include = "test", format = "sdist" },
]
include = ["LICENSE.txt"]

[tool.poetry.dependencies]
six = "*"

[tool.poetry.dev-dependencies]
mock = ">1.0.1"
pytest = "*"
pytest-describe = "*"
pytest-flake8 = "*"
pytest-cov = "*"
wheel = "*"
twine = "*"

[tool.poetry.plugins.pytest11]
pytest_spec = "pytest_spec.plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
