[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pytest_spec"]

[project]
name = "pytest-spec"
version = "5.0.0"
authors = [{ name = "Pawel Chomicki", email = "pawel.chomicki@gmail.com" }]
description = "Library pytest-spec is a pytest plugin to display test execution output like a SPECIFICATION."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["pytest", "test", "unittest", "spec"]
license = { text = "GPL-2.0-or-later" }
classifiers = [
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Testing",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = ["pytest", "pytest-describe"]

[project.entry-points.pytest11]
pytest_spec = "pytest_spec.plugin"

[project.urls]
Documentation = "https://github.com/pchomik/pytest-spec"
Changelog = "https://github.com/pchomik/pytest-spec/CHANGES.txt"
Repository = "https://github.com/pchomik/pytest-spec"
Issues = "https://github.com/pchomik/pytest-spec/issues"

[tool.pytest.ini_options]
addopts = "--spec"
spec_test_format = "{result} {docstring_summary}"

[tool.black]
line-length = 150

[tool.ruff]
select = [
    "B",   # flake8-bugbear
    "C",   # complexity
    "E",   # pycodestyle
    "F",   # pyflakes/autoflake
    "I",   # isort
    "PIE", # flake8-pie
    "W",   # pycodestyle
    "TID", # flake-tidy-imports
]

line-length = 150
target-version = "py39"
exclude = ["tests"]

unfixable = ["B", "C", "D", "E", "F", "PIE", "W", "TID"]
fixable = ["I"]
ignore = ["C901", "C408"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.per-file-ignores]
"ute_ca_agentctl/utils/logging/formatters.py" = ["C901"]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"
